--- a/index.html
+++ b/index.html
@@ -3,3 +3,9 @@
   <head>
   <meta charset="UTF-8">
   <title>期末課題</title>
+    <link rel="stylesheet" href="mystyle.css">
+  </head>
+  <body>
+  <h1>2025の反省と2026の目標</h1>
+  
+  </body>
