--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <title>期末課題</title>
     <link rel="stylesheet" href="mystyle.css">
+    <script src="ex6-1"></script>
   </head>
   <body>
   <h1>2025の反省と2026の目標</h1>
-  
+  <form name="timer17">
+ 
+<input type="button" value="スタート"
+ onclick="hyoji17()">
+ <br>
+ <input type="text" name="moji17" size="39" value="">
   </body>
