Fix button input tag in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <h1>2025の反省と2026の目標</h1>
   <form name="timer17">
  
-<input type="button" value="スタート"
- onclick="hyoji17()">
+<input type="button" value="スタート" onclick="hyoji17()">
  <br>
  <input type="text" name="moji17" size="39" value="">
   </body>
