--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="ja">
   <head>
   <meta charset="UTF-8">
-  <title>期末課題</title>
+     <script src="ex6-1"></script>
+      <title>期末課題</title>
     <link rel="stylesheet" href="mystyle.css">
-    <script src="ex6-1"></script>
   </head>
   <body>
   <h1>2025の反省と2026の目標</h1>
   <form name="timer17">
- 
 <input type="button" value="スタート" onclick="hyoji17()">
  <br>
- <input type="text" name="moji17" size="39" value="">
+ <input type="text" name="moji17" size="30" value="">
+</form>
   </body>
+</html>
