--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
-  <h1>2025の反省と2026の目標</h1>
-  <form name="timer17">
+  <h1>2025の反省</h1>
+<form name="timer17">
 <input type="button" value="スタート" onclick="hyoji17()">
  <br>
  <input type="text" name="moji17" size="30" value="">
