--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ja">
   <head>
   <meta charset="UTF-8">
-     <script src="ex6-1"></script>
-      <title>期末課題</title>
-    <link rel="stylesheet" href="mystyle.css">
-  </head>
+   <title>期末課題</title>
+  <script src="ex6-1"></script>
+  <script src="6-2"></script>
+ <link rel="stylesheet" href="mystyle.css">
+</head>
   <body>
   <h1>2025の反省</h1>
 <form name="timer17">
