--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  <input type="text" name="moji17" size="30" value="">
 </form>
     <!-- 画像をdivで囲む -->
- <h1>練習問題6-14</h1>
+ <h1>イメージ画像</h1>
   <!-- 表示する画像 -->
   <img
     id="myPhoto2"
