--- a/index.html
+++ b/index.html
@@ -14,20 +14,14 @@
  <br>
  <input type="text" name="moji17" size="30" value="">
 </form>
-    <!-- 画像をdivで囲む -->
+
  <h1>イメージ画像</h1>
-  <!-- 表示する画像 -->
-  <img
-    id="myPhoto2"
-    src="images/119371175.png"
-    alt="写真"
-    width="300"
-  >
-
-  <br><br>
-
-  <!-- 画像を切り替えるボタン -->
-  <button onclick="changePhoto614()">画像を変更</button>
-  <button onclick="returnPhoto614()">元に戻す</button>
+<h1>練習問題6-18</h1>
+  <!-- 画像をdivで囲む -->
+  <div id="photoArea">
+    <img id="myPhoto2" src="images/119371175.png"  alt="最初の写真" width="300">
+  </div>
+  <!-- ボタン -->
+  <button onclick="changePhoto618()">画像を切り替える</button>
   </body>
 </html>
