--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   <meta charset="UTF-8">
    <title>期末課題</title>
-  <script src="ex6-1"></script>
-  <script src="6-2"></script>
+  <script src="ex6-1.js"></script>
+  <script src="ex6-2.js"></script>
  <link rel="stylesheet" href="mystyle.css">
 </head>
   <body>
