--- a/index.html
+++ b/index.html
@@ -22,5 +22,41 @@
   </div>
   <!-- ボタン -->
   <button onclick="changePhoto618()">画像を切り替える</button>
+    
+   <h1>練習問題2.4</h1>
+  
+  <table>
+  <caption>
+ 
+   <strong>頑張ったことと反省</strong>
+  <details>
+  <summary>このテーブルの説明</summary>
+  <p>以下のテーブルでは、2番目に反省のある項目が入れられています。その左側にその種目で頑張ったことが、右側に反省が入れられています。</p>
+  </details>
+  </caption>
+  <thead>
+  <tr><th class="important"></th>頑張ったこと<th>項目</th><th>反省</th></tr>
+  </thead>
+  <tbody>
+  <tr><td>目標を持って一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>思うような結果を出すことができなかった</td></tr>
+   <tr><td>授業をサボらずほぼ毎回出席した</td><th>勉強</th><td>内容を完全に理解することができなかった<td></tr>
+  </tbody>
+  </table>
+  <table>
+  <caption>
+  <strong>2025の反省！その番張ったことと反省</strong>
+  </caption>
+  <thead>
+  <tr><th>項目</th><th class="important">頑張ったこと</th><th>反省</th></tr>
+  </thead>
+  <tbody>
+   <tr><th>部活動:硬式野球</th><td>目標を持って一生懸命取り組んだ</td><td>思うような結果を出すことができなかった</td></tr>
+   <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日は混む</td></tr>
+  </tbody>
+  </table>
+ 
+ <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
+ <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
+ <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
   </body>
 </html>
