--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   </thead>
   <tbody>
    <tr><th>部活動:硬式野球</th><td>目標を持って一生懸命取り組んだ</td><td>思うような結果を出すことができなかった</td></tr>
-   <tr><th>回転寿司</th><td>値段が良心的、気軽に手に取れる</td><td>ネタが解凍もの、休みの日は混む</td></tr>
+   <tr><th>勉強</th><td>授業をサボらずほぼ毎回出席した</td><td>内容を完全に理解することができなかった</td></tr>
   </tbody>
   </table>
  
- <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
- <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
- <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
+ <p class="sample1">今後にのために勉強はますます重要になるだろう。</p>
+ <p class="sample2">野球は来年が勝負の年になるだろう。</p>
+ <p class="sample3">一日一日を有意義なものにできるよう努力することが必要だ。</p>
   </body>
 </html>
