--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </details>
   </caption>
   <thead>
-  <tr><th class="important"></th>頑張った事<th>項目</th><th>反省</th></tr>
+  <tr><th class="important">頑張ったこと</th><th>項目</th><th>反省</th></tr>
   </thead>
   <tbody>
   <tr><td>目標を持って一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>思うような結果を出すことができなかった</td></tr>
