--- a/index.html
+++ b/index.html
@@ -58,5 +58,27 @@
  <p class="sample1">今後にのために勉強はますます重要になるだろう。</p>
  <p class="sample2">野球は来年が勝負の年になるだろう。</p>
  <p class="sample3">一日一日を有意義なものにできるよう努力することが必要だ。</p>
+
+<h1>2026の目標</h1>
+<form name="timer18">
+<input type="button" value="スタート" onclick="hyoji18()">
+ <br>
+ <input type="text" name="moji18" size="30" value="">
+</form>
+
+<h1>イメージ画像</h1>
+  <!-- 表示する画像 -->
+  <img
+    id="myPhoto1"
+    src="image/WIN_20260128_21_45_54_Pro.jpg"
+    alt="写真"
+    width="300"
+  >
+
+  <br><br>
+
+  <!-- 画像を切り替えるボタン -->
+  <button onclick="changePhoto614()">画像を変更</button>
+  <button onclick="returnPhoto614()">元に戻す</button>
   </body>
 </html>
