--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <title>期末課題</title>
   <script src="ex6-1.js"></script>
   <script src="ex6-2.js"></script>
+  <script src="ex6-3.js"></script>
  <link rel="stylesheet" href="mystyle.css">
 </head>
   <body>
