--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- 表示する画像 -->
   <img
     id="myPhoto1"
-    src="image/WIN_20260128_21_45_54_Pro.jpg"
+    src="images/12552.jpg"
     alt="写真"
     width="300"
   >
@@ -81,5 +81,6 @@
   <!-- 画像を切り替えるボタン -->
   <button onclick="changePhoto614()">画像を変更</button>
   <button onclick="returnPhoto614()">元に戻す</button>
+
   </body>
 </html>
