--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="ex6-2.js"></script>
   <script src="ex6-3.js"></script>
   <script src="ex6-4.js"></script>
+  <script scr="ex6-5.js"></script>
  <link rel="stylesheet" href="mystyle.css">
 </head>
   <body>
