--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <button onclick="changePhoto614()">画像を変更</button>
   <button onclick="returnPhoto614()">元に戻す</button>
 <h1>あなたの頑張りたいことはなんですか？</h1>
- <input type="button" value="目標" onclick="sayhello71();">
+ <input type="button" value="スタート" onclick="sayhello71();">
  <p>目標は？ <input type="text" id="who71">
  </p>
   </body>
