--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   <button onclick="changePhoto614()">画像を変更</button>
   <button onclick="returnPhoto614()">元に戻す</button>
 <h1>あなたの頑張りたいことはなんですか？</h1>
- <input type="button" value="スタート" onclick="sayhello71();">
- <p>目標は？ <input type="text" id="who71">
+  <input type="button" value="あいさつ" onclick="sayhello71();">
+ <p>誰？ <input type="text" id="who71">
  </p>
   </body>
 </html>
