--- a/index.html
+++ b/index.html
@@ -68,20 +68,6 @@
  <input type="text" name="moji18" size="30" value="">
 </form>
 
-<h1>イメージ画像</h1>
-  <!-- 表示する画像 -->
-  <img
-    id="myPhoto1"
-    src="images/12552.jpg"
-    alt="写真"
-    width="300"
-  >
-
-  <br><br>
-
-  <!-- 画像を切り替えるボタン -->
-  <button onclick="changePhoto614()">画像を変更</button>
-  <button onclick="returnPhoto614()">元に戻す</button>
-
+<h1>今年も１年間頑張るぞ！！</h1>
   </body>
 </html>
