--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
    <strong>頑張ったことと反省</strong>
   <details>
   <summary>このテーブルの説明</summary>
-  <p>以下のテーブルでは、2番目に反省のある項目が入れられています。その左側にその種目で頑張ったことが、右側に反省が入れられています。</p>
+  <p>以下のテーブルでは、2番目に項目が入れられています。その左側に項目で頑張ったことが、右側に反省が入れられています。</p>
   </details>
   </caption>
   <thead>
