--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </thead>
   <tbody>
   <tr><td>目標を持って一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>思うような結果を出せなかった</td></tr>
-  <tr><td>授業をサボらずほぼ毎回出席した</td><th>勉強</th><td>内容理解が難しかった<td></tr>
+  <tr><td>授業にほぼ毎回出席した</td><th>勉強</th><td>内容理解が難しかった<td></tr>
   </tbody>
   </table>
   <table>
@@ -53,7 +53,7 @@
   </thead>
   <tbody>
    <tr><th>部活動:硬式野球</th><td>目標を持って一生懸命取り組んだ</td><td>思うような結果を出せなかった</td></tr>
-   <tr><th>勉強</th><td>授業をサボらずほぼ毎回出席した</td><td>内容理解が難しかった</td></tr>
+   <tr><th>勉強</th><td>授業にほぼ毎回出席した</td><td>内容理解が難しかった</td></tr>
   </tbody>
   </table>
  
