--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <tr><th class="important">頑張ったこと</th><th>項目</th><th>反省</th></tr>
   </thead>
   <tbody>
-  <tr><td>目標を持って一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>思うような結果を出せなかった</td></tr>
+  <tr><td>一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>良い結果を出せなかった</td></tr>
   <tr><td>授業にほぼ毎回出席した</td><th>勉強</th><td>内容理解が難しかった<td></tr>
   </tbody>
   </table>
@@ -52,7 +52,7 @@
   <tr><th>項目</th><th class="important">頑張ったこと</th><th>反省</th></tr>
   </thead>
   <tbody>
-   <tr><th>部活動:硬式野球</th><td>目標を持って一生懸命取り組んだ</td><td>思うような結果を出せなかった</td></tr>
+   <tr><th>部活動:硬式野球</th><td>一生懸命取り組んだ</td><td>良い結果を出せなかった</td></tr>
    <tr><th>勉強</th><td>授業にほぼ毎回出席した</td><td>内容理解が難しかった</td></tr>
   </tbody>
   </table>
