--- a/index.html
+++ b/index.html
@@ -33,29 +33,42 @@
    <strong>頑張ったことと反省</strong>
   <details>
   <summary>このテーブルの説明</summary>
-  <p>以下のテーブルでは、2番目に項目が入れられています。その左側に項目で頑張ったことが、右側に反省が入れられています。</p>
-  </details>
-  </caption>
-  <thead>
-  <tr><th class="important">頑張ったこと</th><th>項目</th><th>反省</th></tr>
-  </thead>
-  <tbody>
-  <tr><td>一生懸命取り組んだ</td><th>部活動:硬式野球</th><td>良い結果を出せなかった</td></tr>
-  <tr><td>授業にほぼ毎回出席した</td><th>勉強</th><td>内容理解が難しかった<td></tr>
-  </tbody>
-  </table>
-  <table>
+<table>
   <caption>
-  <strong>2025の反省！その番張ったことと反省</strong>
+    <strong>頑張ったことと反省</strong>
+    <details>
+      <summary>このテーブルの説明</summary>
+      <p>
+        以下のテーブルでは、2項目に分けて頑張ったことと、
+        それに対する反省内容をまとめています。
+      </p>
+    </details>
   </caption>
+
   <thead>
-  <tr><th>項目</th><th class="important">頑張ったこと</th><th>反省</th></tr>
+    <tr>
+      <th class="important">頑張ったこと</th>
+      <th>項目</th>
+      <th>反省</th>
+      <th>内容</th>
+    </tr>
   </thead>
+
   <tbody>
-   <tr><th>部活動:硬式野球</th><td>一生懸命取り組んだ</td><td>良い結果を出せなかった</td></tr>
-   <tr><th>勉強</th><td>授業にほぼ毎回出席した</td><td>内容理解が難しかった</td></tr>
+    <tr>
+      <td>一生懸命取り組んだ</td>
+      <td>勉強</td>
+      <td>計画通りに進まなかった</td>
+      <td>内容が難しく、理解に時間がかかった</td>
+    </tr>
+    <tr>
+      <td>継続して取り組んだ</td>
+      <td>運動</td>
+      <td>回数が少なかった</td>
+      <td>忙しくて時間を確保できなかった</td>
+    </tr>
   </tbody>
-  </table>
+</table>
  
  <p class="sample1">今後にのために勉強はますます重要になるだろう。</p>
  <p class="sample2">野球は来年が勝負の年になるだろう。</p>
