--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
 </form>
 
 <h1>今年も１年間頑張るぞ！！</h1>
+   <h1>練習問題6-12</h1>
+ <div style="display:flex; align-items:center; gap:12px;">
+ <input type="button" value="画像の変更" onclick="imgchange1();">
+  <img src="./image/sushi_01.png" id="logo"  alt="寿司の画像" class="sushi">
+  <input type="button" value="元に戻す" onclick="imgReset1();">
+ </div>
   </body>
 </html>
