--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="ex6-2.js"></script>
   <script src="ex6-3.js"></script>
   <script src="ex6-4.js"></script>
+  <script src="ex6-5.js"></script>
  <link rel="stylesheet" href="mystyle.css">
 </head>
   <body>
@@ -71,7 +72,7 @@
    <h1>練習問題6-12</h1>
  <div style="display:flex; align-items:center; gap:12px;">
  <input type="button" value="画像の変更" onclick="imgchange1();">
-  <img src="./image/sushi_01.png" id="logo"  alt="寿司の画像" class="sushi">
+  <img src="./images/200605_a_banzai03.png" id="logo"  alt="寿司の画像" class="sushi">
   <input type="button" value="元に戻す" onclick="imgReset1();">
  </div>
   </body>
